2003-03-12  Ross Burton  <ross@burtonini.com>

	* devhelp.keys.in, devhelp.mime: Added gnome-vfs MIME files to map
	.devhelp to application/x-devhelp.

	* Makefile.am: Cleanup, and install the MIME files.

	* devhelp.schemas: Removed, not used any more.

	* debian/: Removed, very out of date.

2003-03-07  Ross Burton  <ross@burtonini.com>

	* AUTHORS: Add myself.

	* src/dh-window.c: Ditto

	* src/dh-base.c (base_init_books): Scan $PREFIX/share/devhelp/books
	and ~/.devhelp/books (instead of ~/.devhelp2).

	* src/dh-main.c (dh_create_socket): Remove an unused variable.

	* src/dh-parser.c: Add lots and lots of error messages. Also use
	the non-deprecated GIOChannel read API.

	* src/dh-base.c (base_add_books): Pass a GError to the parse
	functions, and display warnings if it gets set. Will give this a
	nice UI at some point.

	* src/dh-error.h: Added an "internal error" error message, for
	when constructing parsers etc fails.

	* src/.cvsignore: Update for the new executable name.

2003-03-06  Gil "Dolfin" Osher <dolfin@rpg.org.il>

	* configure.in: Added "he" to ALL_LINGUAS.

2003-03-04  Mikael Hallendal  <micke@codefactory.se>

	* src/Makefile.am (EXTRA_DIST): 
	- Fixes #107536 reported by Tommi Komulainen.
	- added dh-html-mozilla.c and dh-html-gtkhtml2.c to EXTRA_DIST.

2003-03-03  Ross Burton  <ross@burtonini.com>

	* configure.in: Add descriptions to the AC_DEFINE calls.

	* acconfig.h: Remove thanks to above change.

2003-03-03  Ross Burton  <ross@burtonini.com>

	* src/dh-main.c: Fix the prototype on dh_client_data_cb, and
	remove the GTK+ 2.2.0 check as that is assumed.

2003-03-03  Mikael Hallendal  <micke@codefactory.se>

	* devhelp.desktop.in (Exec): changed name to devhelp

2003-03-03  Ross Burton  <ross@burtonini.com>

	* src/dh-main.c: Add a "raise" event to the remote protocol, so
	that the existing instance can be shown.

	* devhelp.desktop.in: We support startup notification!

2003-03-02  Christian Rose  <menthos@menthos.com>
