@@ -1,6 +1,6 @@
 /* -*- Mode: C; tab-width: 8; indent-tabs-mode: t; c-basic-offset: 8 -*- */
 /*
- * Copyright (C) 2002 CodeFactory AB
+ * Copyright (C) 2002-2003 CodeFactory AB
  * Copyright (C) 2001-2003 Mikael Hallendal <micke@codefactory.se>
  *
  * This program is free software; you can redistribute it and/or
@@ -27,6 +27,7 @@
 #include <libgtkhtml/gtkhtml.h>
 
 #include "dh-util.h"
+#include "dh-marshal.h"
 #include "dh-html.h"
 
 #define d(x) 
@@ -173,7 +174,7 @@ html_class_init (DhHtmlClass *klass)
 			      G_SIGNAL_RUN_LAST,
 			      G_STRUCT_OFFSET (DhHtmlClass, uri_selected),
 			      NULL, NULL,
-			      g_cclosure_marshal_VOID__POINTER,
+			      dh_marshal_VOID__POINTER,
 			      G_TYPE_NONE,
 			      1, G_TYPE_POINTER);
 }
@@ -432,7 +433,6 @@ html_stream_cancelled (HtmlStream *stream,
 static void
 html_q_data_free (ReaderQueueData *q_data)
 {
-        DhHtmlPriv *priv;
         
 }
 
