@@ -1,2 +1,2 @@
-STRING:VOID
+VOID:BOOLEAN
 VOID:POINTER
